[workspace]
members = ["webpki-ccadb", "webpki-roots"]

[workspace.package]
edition = "2018"
homepage = "https://github.com/rustls/webpki-roots"
repository = "https://github.com/rustls/webpki-roots"

[workspace.dependencies]
hex = "0.4.3"
pki-types = { package = "rustls-pki-types", version = "1.8", default-features = false }
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"] }
x509-parser = "0.16.0"
yasna = "0.5.2"

[patch.crates-io]
#TODO(XXX): Remove once pki-types 1.8 published.
pki-types = { package = "rustls-pki-types", git = "https://github.com/cpu/pki-types", rev = "b1e46728ced7d0f659692139c48e7db175290cdf" }
